adiciona user em grupo

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:18-alpine
 WORKDIR /app
-# RUN addgroup dev && adduser -S -G rayanne dev
-# USER rayanne
+RUN addgroup dev && adduser -S -G rayanne dev
+USER rayanne
 COPY . .
 
 RUN apk add --no-cache python3 g++ make
