melhorando a performance do build

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,12 +1,12 @@
 FROM node:18-alpine
 WORKDIR /app
-RUN addgroup dev && adduser -S -G rayanne dev
-USER rayanne
-COPY . .
+# RUN addgroup dev && adduser -S -G rayanne dev
+# USER rayanne
+COPY package.json .
 
 RUN apk add --no-cache python3 g++ make
 RUN yarn install --production
-
+COPY . .
 CMD [ "node", "src/index.js" ]
 
 
